added time-based switch functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <p>Total Followers: 23,004</p>
         </div>
         <div class="header-content-switcher">
-          <p>Dark Mode</p>
+          <p id="theme">Light Mode</p>
           <div class="toggle">
             <input type="checkbox" id="toggle" />
             <label for="toggle"></label>
